# text-to-sql

./: .gitignore  __azurite_db_blob__.json  __azurite_db_blob_extent__.json  __azurite_db_table__.json  diagram.md  saml_authentication.md  text.md
Solution5/text_to_sql/: pyproject.toml  requirements.txt
Solution5/text_to_sql/.github/workflows/: ci.yml
Solution5/text_to_sql/docs/: project_userguide.md  secret_toolkit.md  settings_userguide.md
Solution5/text_to_sql/infrastructure/docker/: text_to_sql.Dockerfile  web.Dockerfile
Solution5/text_to_sql/infrastructure/kubernetes/: deplyoment.yaml  service.yaml
Solution5/text_to_sql/src/adapters/azure_functions/: function_app.py
Solution5/text_to_sql/src/adapters/gunicorn/: wsgi.py
Solution5/text_to_sql/src/common/llm/: openai_service.py  prompt_menager.py
Solution5/text_to_sql/src/common/log/: azure_logger_adapter.py  logger.py  logger_adapter.py  logger_factory.py
Solution5/text_to_sql/src/common/settings/: settings_del.py
Solution5/text_to_sql/src/common/utils/: connection_string_parser.py  cors_helper.py  text_utils.py
Solution5/text_to_sql/src/text_to_sql/: api.py
Solution5/text_to_sql/src/text_to_sql/agents/: agent.py  conversation_state.py  system_state.py  tool.py
Solution5/text_to_sql/src/text_to_sql/routes/: health.py  text_to_sql.py
Solution5/text_to_sql/web/: index.html  package.json  tailwind.config.ts
Solution5/text_to_sql/web/src/: i18n.ts  index.css
Solution5/text_to_sql/web/src/api/: api.tsx  example.tsx
Solution5/text_to_sql/web/src/components/: LoadingIndicator.tsx  Mermaid.tsx  ResultsTable.tsx  Sidebar.tsx
(+1017 files in other folders)
